// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el gifGrid Debe hacer match con el snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated fadeIn"
  >
    Green Arrow
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="cardGrid"
  />
</Fragment>
`;

exports[`Pruebas en el gifGrid debe mostrar items cuando se cargan imagenes  useFetchGifts 1`] = `
<Fragment>
  <h3
    className="animate__animated fadeIn"
  >
    Green Arrow
  </h3>
  <div
    className="cardGrid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
